# rust-news-scraper

./: Cargo.toml  README.md
data/: news_feed.json
src/: main.rs  sources.rs
