[package]
name = "news-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
